# piscine-rust

modules/00/ex00/: hello.rs
modules/00/ex01/: min.rs
modules/00/ex02/: collatz.rs  print_bytes.rs  yes.rs
modules/00/ex03/: fizzbuzz.rs
modules/00/ex04/module00-ex04/: Cargo.toml
modules/00/ex04/module00-ex04/src/: other.rs  overflow.rs
modules/00/friday/src/: main.rs
